@@ -1,3 +1,12 @@
+*** 20000901_1 by lusky
+revved patchlevel to rc5
+added canonize() call in m_message if NO_DUPE_MULTI_MESSAGES is defined
+
+
+*** 20000824_4 by lusky
+- removed trailing ')' from channel +/-j oper notices
+
+
 *** 20000824_3 by lusky
 - glines were not matched properly for unidented clients
 
